# math3D

./: .gitmodules  CMakeLists.txt  README.md  build.sh  conanfile.txt
cmake/Modules/: benchmark.cmake  gmock.cmake
tests/: CMakeLists.txt  EulerAnglesTest.cpp  Matrix3DTest.cpp  OrientationTest.cpp  QuaternionTest.cpp  Vector3DTest.cpp
tests/src/: Vector3DTest.cpp  benchmark_tests.cpp
tests/src/benchmark/: Vec4Benchmark.cpp  Vector3DBenchmark.cpp
tests/src/unit_tests/: EulerAnglesTest.cpp  Mat4Test.cpp  Matrix3DTest.cpp  OrientationTest.cpp  QuaternionTest.cpp  Vec4Test.cpp  Vector3DTest.cpp
